29-06-2004 Qball <Qball@qballcow.nl>
	* Added temporary open location window
	* after updating the gui (in filling song-browser) check if the user
	closed the window
	* Added icons to the window


28-06-2004 Qball <Qball@qballcow.nl>
	* Added a song-browser window
	* Added images for song/stream to playlist
	* song-browser reloads if playlist changes.
	* Added custom stock icons.
	* Adding from song browser now completely works.

27-06-2004 Qball <Qball@qballcow.nl>
	* Changed move function so it works with filtered playlist
	* Force update after changes to playlist (delete and move)
	* added function main_trigger_update
	* Implemented clearing. (pressing remove when nothing is selected)
	* Added keybindings (del)
	* Added some tooltips
	* Implemented delete in pl2. (single and multiple select

26-06-2004 Qball <Qball@qballcow.nl>
	* Implemented primary dnd support in pl2.

24-06-2004 Qball <Qball@qballcow.nl>
	* Removed filling of info.playlist
	* Made search case insensitive
	* don't match when no match string

23-06-2004 Qball <Qball@qballcow.nl>
	* removed the need of info.playlist in id3info and the popup/tray icon
	* middle mouse click on tray-icon pauses/plays

15-05-2004 Qball <Qball@qballcow.nl>
	* window title is now <song info > 
	* more old code removed
	* port number now also gets updated when typed in the entry. (wrong
signal attached) 
	* Fixed the Makefiles. now make dist works again .. (damn autotools,
the higher the version number the more crap it gives you)
	* Fixed a few compile warnings
	* Changed default port

14-05-2004 Qball <Qball@qballcow.nl>
	* Made track width in current playlist fixed width. so it wont get
huge on weird tags.
	* Set a max width
12-05-2004 Qball <Qball@qballcow.nl>
	* Removed some dead code..  

09-05-2004 Qball <Qball@qballcow.nl>
	* Double click/enter is now add song/artist/album in every tree view
	besides the directory browser.
	* changed IDS browser to Song tag browser.